# Extrashifty

./: .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CONTRIBUTING.md  Makefile  README.md  compose.yml
.github/: dependabot.yml
.github/workflows/: ci.yml  deploy.yml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: README  env.py
backend/alembic/versions/: 001_initial_schema.py  002_add_webhook_idempotency_and_stripe_dispute.py  003_add_profile_and_clock_record_tables.py  004_add_shift_date_index.py
backend/app/: __init__.py  initial_data.py  main.py
backend/app/api/: deps.py
backend/app/api/v1/: api.py
backend/app/api/v1/endpoints/: admin.py  agency.py  appeals.py  applications.py  auth.py  company.py  disputes.py  gdpr.py  invoices.py  marketplace.py  notifications.py  payments.py  penalties.py  reviews.py  shifts.py  staff.py  stripe_webhooks.py  tax.py  users.py  verification.py  wallet.py  websocket.py
backend/app/core/: __init__.py  cache.py  config.py  db.py  errors.py  events.py  middleware.py  rate_limit.py  scheduler.py  security.py  utils.py
backend/app/crud/: __init__.py  application.py  base.py  notification.py  payment.py  review.py  shift.py  user.py  wallet.py
backend/app/email/: __init__.py  send.py
backend/app/email/templates/: base.html  password_reset.html  shift_application.html  shift_assigned.html  verify_email.html  welcome.html
backend/app/models/: __init__.py  agency.py  appeal.py  application.py  base.py  gdpr.py  invoice.py  notification.py  payment.py  penalty.py  profile.py  review.py  shift.py  tax.py  user.py  wallet.py
backend/app/schemas/: __init__.py  agency.py  appeal.py  application.py  dispute.py  gdpr.py  invoice.py  notification.py  payment.py  penalty.py  review.py  shift.py  stripe.py  tax.py  token.py  user.py  verification.py  wallet.py
backend/app/services/: __init__.py  agency_billing_service.py  appeal_service.py  dispute_service.py  email_service.py  escrow_service.py  gdpr_service.py  invoice_service.py  payment_service.py  penalty_service.py  storage_service.py  stripe_service.py  tax_service.py  verification_service.py
backend/app/templates/email/: account_reactivated.html  account_suspended.html  failed_topup.html  suspension_warning.html
backend/app/templates/invoices/: agency_invoice.html  company_receipt.html  staff_pay_stub.html
backend/scripts/: backend-pre-start.sh  backup-db.sh  restore-db.sh
backend/tests/: __init__.py  conftest.py  test_health.py
backend/tests/api/: test_auth.py  test_shifts.py  test_users.py
backend/tests/crud/: __init__.py  test_user_crud.py
docs/: README.md  deployment.md  development.md
frontend/: .dockerignore  .env.example  .gitignore  .prettierignore  Dockerfile  nginx.conf  openapi-ts.config.ts  package-lock.json  package.json  playwright.config.ts  tsconfig.app.json  vite.config.ts  vitest.config.ts
frontend/src/: index.css  main.tsx  routeTree.gen.ts
frontend/src/client/: index.ts
frontend/src/components/: ErrorBoundary.tsx
frontend/src/components/Admin/: AdminDashboard.tsx
frontend/src/components/Agency/: AgencyDashboard.tsx  index.ts
frontend/src/constants/: queryConfig.ts
frontend/src/contexts/: WebSocketContext.tsx  index.ts
frontend/src/hooks/: index.ts  useAuth.ts  useWebSocket.ts
frontend/src/lib/: api.ts  apiClient.ts  badgeUtils.ts  mockApi.ts  timeUtils.ts  transactionUtils.ts  utils.test.ts  utils.ts
frontend/src/mocks/: browser.ts  handlers.ts  server.ts
frontend/src/routes/: __root.tsx  _layout.tsx  about.tsx  contact.tsx  cookies.tsx  index.tsx  login.tsx  pricing.tsx  privacy.tsx  recover-password.tsx  reset-password.tsx  signup.tsx  terms.tsx
frontend/src/stores/: app.ts
frontend/src/types/: agency.ts  application.ts  company.ts  features.ts  index.ts  payment.ts  shift.ts  staff.ts  user.ts
frontend/tests/: accessibility.spec.ts  auth.spec.ts  example.spec.ts  landing.spec.ts  navigation.spec.ts  setup.ts
frontend/tests/fixtures/: test-data.ts
(+148 files in other folders)
